// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Autocomplete Airport 1`] = `
<div
  className="gkAUgx"
>
  <div
    style={
      Object {
        "width": 244,
      }
    }
  >
    <div
      className="eekoGJ"
    >
      <div
        className="react-autosuggest__container"
      >
        <div
          className="bSFwua"
        >
          <textarea
            aria-activedescendant={null}
            aria-autocomplete="list"
            aria-expanded={false}
            aria-haspopup={false}
            aria-owns="react-autowhatever-1"
            autoCapitalize="sentences"
            autoComplete="off"
            autoFocus={true}
            className="react-autosuggest__input hRSdhE"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            placeholder="Туда"
            role="combobox"
            rows="1"
            type="text"
            value=""
            wrap="off"
          />
          <div
            className="airport-input__geo jaRuHE"
          >
            <div
              className="bTVxuH"
            >
              
            </div>
            
            
          </div>
          <div
            className="hZqNep"
          >
            
          </div>
        </div>
        <div
          className="react-autosuggest__suggestions-container"
          id="react-autowhatever-1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Box Defalut 1`] = `
<div
  className="gkAUgx"
>
  <div
    className="kjZrJP"
  >
    <p>
      box content
    </p>
  </div>
</div>
`;

exports[`Storyshots Buttons Default 1`] = `
<div
  className="gkAUgx"
>
  <button
    className="no-global hQyXOc"
    disabled={undefined}
    size="normal"
  >
    <span
      className="ieBWQc"
      size="normal"
    >
      Авиабилеты
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons Disabled 1`] = `
<div
  className="gkAUgx"
>
  <button
    className="no-global iRCAqb"
    disabled={true}
    size="normal"
  >
    <span
      className="ieBWQc"
      size="normal"
    >
      Cake is a lie
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons Icon-only button 1`] = `
<div
  className="gkAUgx"
>
  <button
    className="no-global lnaIAb"
    disabled={undefined}
    size="large"
  >
    <span
      className="dOFMSX"
      size="large"
    >
      <svg
        className="hJDrrb"
        size="normal"
        style={undefined}
      >
        <use
          xlinkHref="#kb_carrot_monochrome"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons Sizes 1`] = `
<div
  className="gkAUgx"
>
  <button
    className="no-global gafipK"
    disabled={undefined}
    size="large"
  >
    <span
      className="ieBWQc"
      size="large"
    >
      Бальшой
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons With icons 1`] = `
<div
  className="gkAUgx"
>
  <button
    className="no-global jCAGTR"
    disabled={undefined}
    size="normal"
  >
    <span
      className="YhApM"
      size="normal"
    >
      <svg
        className="cdianR"
        size="normal"
        style={undefined}
      >
        <use
          xlinkHref="#kb_plane"
        />
      </svg>
    </span>
    <span
      className="ehcfDj"
      size="normal"
    >
      Авиабилеты
    </span>
    <span
      className="YhApM"
      size="normal"
    >
      <svg
        className="hJDrrb"
        size="normal"
        style={undefined}
      >
        <use
          xlinkHref="#kb_hand-baggage"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Storyshots Checkbox default 1`] = `
<div
  className="gkAUgx"
>
  <div>
    <label
      className="kJhvAq"
      disabled={false}
    >
      <span
        checked={false}
        className="checkbox cZIpJj"
        disabled={false}
      >
        <input
          checked={false}
          className="cjpCUo"
          disabled={false}
          name=""
          onChange={[Function]}
          type="checkbox"
        />
      </span>
      <span
        className="label-text fsTWZL"
        disabled={false}
      >
        Авиабилеты
      </span>
    </label>
  </div>
</div>
`;

exports[`Storyshots Checkbox disabled 1`] = `
<div
  className="gkAUgx"
>
  <label
    className="jgsyDm"
    disabled={true}
  >
    <span
      checked={false}
      className="checkbox eMVJVt"
      disabled={true}
    >
      <input
        checked={false}
        className="cjpCUo"
        disabled={true}
        name=""
        onChange={[Function]}
        type="checkbox"
      />
    </span>
    <span
      className="label-text bqccLE"
      disabled={true}
    >
      Авиабилеты
    </span>
  </label>
</div>
`;

exports[`Storyshots Collapse Accordion 1`] = `
<div
  className="gkAUgx"
>
  <div
    style={
      Object {
        "width": "252px",
      }
    }
  >
    <div
      className="rc-collapse"
      style={undefined}
    >
      <div
        className="rc-collapse-item CmSa"
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Foo
        </div>
      </div>
      <div
        className="rc-collapse-item CmSa"
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Bar
        </div>
      </div>
      <div
        className="rc-collapse-item CmSa"
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Mdaaaaa
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Collapse Default 1`] = `
<div
  className="gkAUgx"
>
  <div
    style={
      Object {
        "width": "252px",
      }
    }
  >
    <div
      className="rc-collapse"
      style={undefined}
    >
      <div
        className="rc-collapse-item CmSa"
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Foo
        </div>
      </div>
      <div
        className="rc-collapse-item CmSa"
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Bar
        </div>
      </div>
      <div
        className="rc-collapse-item CmSa"
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Mdaaaaa
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Collapse Default active panel 1`] = `
<div
  className="gkAUgx"
>
  <div
    style={
      Object {
        "width": "252px",
      }
    }
  >
    <div
      className="rc-collapse"
      style={undefined}
    >
      <div
        className="rc-collapse-item rc-collapse-item-active CmSa"
        style={undefined}
      >
        <div
          aria-expanded={true}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Foo
        </div>
        <div
          className="rc-collapse-content rc-collapse-content-active"
          role="tabpanel"
        >
          <div
            className="rc-collapse-content-box"
          >
            
              A dog is a type of domesticated animal.
              Known for its loyalty and faithfulness,
              it can be found as a welcome guest in many households across the world.
            
          </div>
        </div>
      </div>
      <div
        className="rc-collapse-item CmSa"
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Bar
        </div>
      </div>
      <div
        className="rc-collapse-item CmSa"
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Mdaaaaa
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ControlsGroup Different controls group 1`] = `
<div
  className="gkAUgx"
>
  <div
    className="jNIfTc"
  >
    <button
      className="no-global clavYb"
      disabled={undefined}
      size="large"
    >
      <span
        className="ieBWQc"
        size="large"
      >
        Пойти
      </span>
    </button>
    <div
      className="kxgwJA"
    >
      <textarea
        autoCapitalize="sentences"
        autoComplete="off"
        className="dgkqyf"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        readOnly={true}
        rows="1"
        value="Шереметьево"
        wrap="off"
      />
      <div
        className="airport-input__geo jagyzS"
      >
        <div
          className="bTVxuH"
        >
          Шереметьево
        </div>
        
        
      </div>
      <div
        className="WJZuz"
      >
        SVO
      </div>
    </div>
    <button
      className="no-global cUsjbC"
      disabled={undefined}
      size="large"
    >
      <span
        className="ieBWQc"
        size="large"
      >
        Найти
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots ControlsGroup Inputs group 1`] = `
<div
  className="gkAUgx"
>
  <div
    className="jNIfTc"
  >
    <div
      className="jIhVCZ"
    >
      <textarea
        autoCapitalize="sentences"
        autoComplete="off"
        className="etbSgC"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        readOnly={true}
        rows="1"
        value="Шереметьево"
        wrap="off"
      />
      <div
        className="airport-input__geo jaRuHE"
      >
        <div
          className="bTVxuH"
        >
          Шереметьево
        </div>
        
        
      </div>
      <div
        className="WJZuz"
      >
        SVO
      </div>
    </div>
    <div
      className="bgXCBx"
      onClick={[Function]}
    >
      <svg
        className="controls-group__swap jyPBLm icon-inherit-color hKVDhl"
        size="xxsmall"
        style={undefined}
      >
        <use
          xlinkHref="#kb_left-right"
        />
      </svg>
    </div>
    <div
      className="eByEHQ"
    >
      <textarea
        autoCapitalize="sentences"
        autoComplete="off"
        className="hjCJqY"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        rows="1"
        value="Несуществующий город"
        wrap="off"
      />
      <div
        className="airport-input__geo jagyzS"
      >
        <div
          className="bTVxuH"
        >
          Несуществующий город
        </div>
        
        
      </div>
      <div
        className="hZqNep"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DateRange DateRange 1`] = `
<div
  className="gkAUgx"
>
  <div
    className="bFUhva"
  >
    <div
      className="DateInput--startDate--placeholder DateInput--endDate--placeholder"
    >
      <div
        className="DateRangePicker"
      >
        <div>
          <div
            className="DateRangePickerInput"
          >
            <div
              className="DateInput"
            >
              <input
                aria-describedby=""
                aria-label="Туда"
                autoComplete="off"
                className="DateInput__input"
                disabled={false}
                id="startDate"
                name="startDate"
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="Туда"
                readOnly={false}
                required={false}
                type="text"
                value=""
              />
              
              <div
                className="DateInput__display-text"
              >
                Туда
              </div>
            </div>
            <div
              className="DateRangePickerInput__arrow"
            >
              <span />
            </div>
            <div
              className="DateInput"
            >
              <input
                aria-describedby=""
                aria-label="Обратно"
                autoComplete="off"
                className="DateInput__input"
                disabled={false}
                id="endDate"
                name="endDate"
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="Обратно"
                readOnly={false}
                required={false}
                type="text"
                value=""
              />
              
              <div
                className="DateInput__display-text"
              >
                Обратно
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Dropdown Defalut 1`] = `
<div
  className="gkAUgx"
>
  <onClickOutside-Mock-Decorator>
    <div
      className="lYJvF"
    >
      <div
        onClick={[Function]}
      >
        click to open  
        <button
          className="no-global hQyXOc"
          disabled={undefined}
          size="normal"
        >
          <span
            className="ieBWQc"
            size="normal"
          >
            click
          </span>
        </button>
      </div>
    </div>
  </onClickOutside-Mock-Decorator>
</div>
`;

exports[`Storyshots FilterSection Default 1`] = `
<div
  className="gkAUgx"
>
  <div
    style={
      Object {
        "width": 252,
      }
    }
  >
    <section
      className="kjZrJP"
    >
      <header
        className="gUUHSd"
      >
        <div>
          Пересадки
        </div>
        <div>
          Сбросить
        </div>
      </header>
      <div
        className="fKdGeq"
      >
        <div>
          <div>
            <label
              className="kJhvAq"
              disabled={false}
            >
              <span
                checked={false}
                className="checkbox cZIpJj"
                disabled={false}
              >
                <input
                  checked={false}
                  className="cjpCUo"
                  disabled={false}
                  name=""
                  onChange={[Function]}
                  type="checkbox"
                />
              </span>
              <span
                className="label-text fsTWZL"
                disabled={false}
              >
                Без пересадок
              </span>
            </label>
          </div>
          <div>
            <label
              className="kJhvAq"
              disabled={false}
            >
              <span
                checked={false}
                className="checkbox cZIpJj"
                disabled={false}
              >
                <input
                  checked={false}
                  className="cjpCUo"
                  disabled={false}
                  name=""
                  onChange={[Function]}
                  type="checkbox"
                />
              </span>
              <span
                className="label-text fsTWZL"
                disabled={false}
              >
                1 пересадка
              </span>
            </label>
          </div>
          <div>
            <label
              className="kJhvAq"
              disabled={false}
            >
              <span
                checked={false}
                className="checkbox cZIpJj"
                disabled={false}
              >
                <input
                  checked={false}
                  className="cjpCUo"
                  disabled={false}
                  name=""
                  onChange={[Function]}
                  type="checkbox"
                />
              </span>
              <span
                className="label-text fsTWZL"
                disabled={false}
              >
                2 и более
              </span>
            </label>
          </div>
        </div>
      </div>
      <div
        className="rc-collapse"
        style={undefined}
      >
        <div
          className="rc-collapse-item jczfhm CmSa"
          style={undefined}
        >
          <div
            aria-expanded={false}
            className="rc-collapse-header"
            onClick={[Function]}
            role="tab"
          >
            <div
              className="cUEikM"
            >
              <div
                className="bQdmdY"
              >
                Пересадки
              </div>
              <svg
                className="kszFRA icon-inherit-color hKVDhl"
                size="xxsmall"
                style={undefined}
              >
                <use
                  xlinkHref="#kb_arrow-down"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Fluid layout Single column 1`] = `
<div
  className="gkAUgx"
>
  <div
    style={
      Object {
        "width": "100vw",
      }
    }
  >
    <div
      className="eBTYHE"
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "background": "rgba(35, 194, 86, .4)",
            "display": "flex",
            "height": 140,
            "justifyContent": "center",
          }
        }
      >
        Main content
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Fluid layout Two columns 1`] = `
<div
  className="gkAUgx"
>
  <div
    style={
      Object {
        "width": "100vw",
      }
    }
  >
    <div
      className="kVZtLS"
    >
      <div
        className="hRqBrY"
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "background": "rgba(230, 73, 38, .4)",
              "display": "flex",
              "height": 140,
              "justifyContent": "center",
            }
          }
        >
          Sidebar
        </div>
      </div>
      <div
        className="bnRtsO"
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "background": "rgba(35, 194, 86, .4)",
              "display": "flex",
              "height": 140,
              "justifyContent": "center",
            }
          }
        >
          Main content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Icon Medium Icon with stroke & fill 1`] = `
<div
  className="gkAUgx"
>
  <svg
    className="bmlaaq"
    size="medium"
    style={undefined}
  >
    <use
      xlinkHref="#kb_airport-change"
    />
  </svg>
</div>
`;

exports[`Storyshots Icon Small Icon with stroke 1`] = `
<div
  className="gkAUgx"
>
  <svg
    className="bXGNbG"
    size="small"
    style={undefined}
  >
    <use
      xlinkHref="#kb_checkbox"
    />
  </svg>
</div>
`;

exports[`Storyshots PassengerPicker Defalut 1`] = `
<div
  className="gkAUgx"
>
  <div
    className="dIOBAC"
  >
    <div>
      <div
        className="kdTGBA"
      >
        Взрослые
      </div>
      <div
        className="cqvtdv"
      >
        До 2 лет, без места
      </div>
    </div>
    <div
      className="eMVHAg"
    >
      <span
        className="eSUyJK"
      >
        1
      </span>
      <div
        className="gONDlG"
      >
        <button
          className="no-global cIRAqJ ekaeqP"
          disabled={true}
          onClick={[Function]}
          size="normal"
        >
          <span
            className="YhApM"
            size="normal"
          >
            <svg
              className="jOglth"
              size="normal"
              style={undefined}
            >
              <use
                xlinkHref="#kb_minus"
              />
            </svg>
          </span>
        </button>
        <button
          className="no-global cIRAqJ gcYWkW"
          disabled={false}
          onClick={[Function]}
          size="normal"
        >
          <span
            className="YhApM"
            size="normal"
          >
            <svg
              className="jOglth"
              size="normal"
              style={undefined}
            >
              <use
                xlinkHref="#kb_plus"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
